# vcpkg-example

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
